eagle_test/error/continue_error.eagle
continue;
// expected: [Error at line 1] At 'continue': Can't use 'continue' keyword outside loop
